# WarehouseApp

./: .gitignore  CMakeLists.txt  README.md
data/: products.txt
src/: FileIO.cpp  FileIO.h  Menu.cpp  Menu.h  Product.cpp  Product.h  SqliteStorage.cpp  SqliteStorage.h  Warehouse.cpp  Warehouse.h  main.cpp
